fix: spacing

--- a/src/styles/not-found.module.css
+++ b/src/styles/not-found.module.css
@@ -1,5 +1,5 @@
 .container {
-  min-height: calc(100vh - 54px);
+  min-height: calc(100vh - 108px);
   padding: var(--padding);
   position: relative;
   margin-block-start: 54px;
